# EcoVsPolluto

./: CMakeLists.txt  README.md  image_processing.ipynb
.github/workflows/: c-cpp.yml
2DGame/: Animation.h  Button.h  Collider.h  GameManager.cpp  GameManager.h  LevelManager.h  MakeFile  Panel.h  Particle.h  ParticleSystem.h  Player.h  SoundManager.h  Text.h  Tile.h  main.cpp
EcoVsPolluto/: Animation.cpp  Animation.h  Button.cpp  Button.h  Collider.cpp  Collider.h  GUIManager.cpp  GUIManager.h  GameManager.cpp  GameManager.h  LevelManager.cpp  LevelManager.h  MakeFile  Panel.cpp  Panel.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  SoundManager.cpp  SoundManager.h  Text.cpp  Text.h  Tile.cpp  Tile.h  main.cpp
EcoVsPolluto/levels/: Highscores.txt  LevelData0.txt  LevelData1.txt  LevelData3.txt
installation/: install4Windows.bat  install4linux.sh  install4macOS.sh
sfml_start/: Makefile  a  hello_word.cpp  install_sfml4linux.sh  install_sfml4macOS.sh  install_sfml4windows.bat  test.cpp
